--- a/compose/production/django/Dockerfile
+++ b/compose/production/django/Dockerfile
@@ -3,10 +3,18 @@ FROM python:3.7-slim-buster
 ENV PYTHONUNBUFFERED 1
 
 RUN apt-get update \
-  # dependencies for building Python packages
-  && apt-get install -y build-essential \
+  # dependencies for building Python packages and some others
+  && apt-get install -y build-essential python3-dev python3-setuptools \
   # psycopg2 dependencies
   && apt-get install -y libpq-dev \
+  # pillow dependencies
+  && apt-get install -y libjpeg-dev zlib1g-dev \
+  # memcached dependencies
+  && apt-get install -y libmemcached-dev \
+  # libffi for cffi
+  && apt-get install -y libffi-dev \
+  # libs for pycurl
+  && apt-get install -y libcurl4-openssl-dev libssl-dev libpython3.7-dev libnss3 libnss3-dev \
   # Translations dependencies
   && apt-get install -y gettext \
   # cleaning up unused files
