--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@
 DJANGO_SECRET_KEY=
 DJANGO_ADMIN_URL=admin/
 DJANGO_ALLOWED_HOSTS=127.0.0.1
+# DJANGO_SETTINGS_MODULE=core.settings.production
 
 # Security
 # ------------------------------------------------------------------------------
