Fix docker setup

--- a/.env.example
+++ b/.env.example
@@ -1,63 +1,37 @@
-# General
-# ------------------------------------------------------------------------------
-DJANGO_SECRET_KEY=
-DJANGO_ADMIN_URL=admin/
-DJANGO_ALLOWED_HOSTS=127.0.0.1
-# DJANGO_SETTINGS_MODULE=core.settings.production
+DJANGO_SETTINGS_MODULE=core.settings.production
 
-# Security
-# ------------------------------------------------------------------------------
-# TIP: better off using DNS, however, redirect is OK too
-DJANGO_SECURE_SSL_REDIRECT=False
+DJANGO_ADMIN_URL=
+WAGTAIL_ADMIN_URL=
 
-# Gunicorn
-# ------------------------------------------------------------------------------
-WEB_CONCURRENCY=4
-
-# Sentry
-# ------------------------------------------------------------------------------
-SENTRY_DSN=
-
-
-# Redis
-# ------------------------------------------------------------------------------
-REDIS_URL=redis://redis:6379/0
-
-# Celery
-# ------------------------------------------------------------------------------
-CELERY_BROKER_URL=redis://localhost:6379/0
-
-# Flower
-# CELERY_FLOWER_USER=
-# CELERY_FLOWER_PASSWORD=
-
-# Email
-# ------------------------------------------------------------------------------
-DJANGO_DEFAULT_FROM_EMAIL=
-DJANGO_SERVER_EMAIL=
+DEFAULT_FROM_EMAIL=
+SERVER_EMAIL=
+EMAIL_SUBJECT_PREFIX=
 EMAIL_USE_TLS=True
 EMAIL_HOST=
 EMAIL_PORT=587
 EMAIL_HOST_USER=
 EMAIL_HOST_PASSWORD=
 
-# AWS
+SENTRY_DSN=
+DJANGO_SENTRY_LOG_LEVEL=
+
+WAGTAIL_SITE_NAME=
+BASE_URL=
+
+DISABLE_SSL=
+
+DJANGO_ALLOWED_HOSTS=.viscoding.com,viscoding.com
+
+DJANGO_SECRET_KEY=
+
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
+AWS_DEFAULT_REGION=
 
-# PostgreSQL
-# ------------------------------------------------------------------------------
-POSTGRES_HOST=127.0.0.1
-POSTGRES_PORT=5432
+POSTGRES_USER=
+POSTGRES_PASSWORD=
 POSTGRES_DB=core
-POSTGRES_USER=core
-POSTGRES_PASSWORD=core*109091091091091
+POSTGRES_HOST=postgres
+POSTGRES_PORT=5432
 
-
-# Google auth
-# ------------------------------------------------------------------------------
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
-
-DISABLE_SSL=False
-REDIS_CACHE=False
+REDIS_URL=redis://redis:6379/0
