--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,8 @@ Django>=3.0,<3.1
 wagtail>=2.9,<2.10
 sentry-sdk==0.16.2
 django-redis==4.12.1
+django-debug-toolbar==2.2
+argon2-cffi==20.1.0
+psycopg2==2.8.5
+django-environ==0.4.5
+gunicorn==20.0.4
