--- a/compose/production/nginx/service-django.conf
+++ b/compose/production/nginx/service-django.conf
@@ -2,6 +2,18 @@ upstream django {
     server django:8000;
 }
 
+# redirect www to non-www
+server {
+    listen                  443 ssl;
+    server_name             www.[[CONFIG SERVER NAME]];
+
+    ssl_certificate         SSL_CERT;
+    ssl_certificate_key     SSL_KEY;
+    ssl_trusted_certificate SSL_CHAIN_CERT;
+
+    return 301 https://[[CONFIG SERVER NAME]]$request_uri;
+}
+
 server {
     listen                  443 ssl;
     server_name             [[CONFIG SERVER NAME]];
@@ -15,6 +27,7 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
+        proxy_set_header X-Forwarded-Protocol $scheme;
     }
 
     location /static {
